# Knight-Leveson-Redux

./: .env.example  .gitignore  CITATION.cff  README.md  commands.sh  pyproject.toml  repo_rt.md  report-spec-2.md  report-spec.md  report.md  requirements.txt
agents/: base.py  claude_code_agent.py  codex_agent.py  cursor_agent.py  gemini_agent.py  mock_agent.py  opencode_agent.py  registry.py  trajectory.py
analysis/: all_fives_K.py  all_triples_K.py  analyze_cmv_oracle.py  analyze_cmv_results.py  analyze_results.py  build_n_version_units.py  build_n_version_units_consensus.py  build_n_version_units_fingerprint.py  build_n_version_units_lic_disagree.py  build_n_version_units_no_oracle.py  model-of-independence.md  plot_acceptance_summary.py  plot_cross_agent_phi_buckets.py  plot_filtered_failure_heatmap.py  plot_heatmap_alternatives.py  plot_heatmap_tables.py  plot_lic10_failure_modes.py  plot_lic10_failure_modes_copy.py  plot_lic_failure_counts.py  plot_lic_failure_counts_combined.py  plot_lic_failure_venn.py  plot_lic_upset.py  plot_model_failure_buckets.py  plot_phi_bucket_combined.py  plot_phi_buckets.py  plot_phi_ecdf.py  report_fault_events_by_test_lic.py  report_lic_failure_modes.py
config/: main-v2.yaml  main.yaml  pilot.yaml  test.yaml
docs/: README.md  build.py  experiment_design.md  index.html  view.html
harnesses/: base.py  execution.py  pascal_harness.py  prompt_context.py  python_harness.py  rust_harness.py
harnesses-realcompare/: __init__.py  json_protocol.py  pascal_harness.py  python_harness.py  rust_harness.py
pipeline/: generate_versions.py  (+7 more)
(+351 files in other folders)
